[gd_scene load_steps=2 format=3 uid="uid://bn0bh7k3wq5mx"]

[ext_resource type="Script" path="res://scenes/ui/death_system_test.gd" id="1"]

[node name="DeathSystemTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "DRAGON DEATH SYSTEM TEST"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 12
text = "Loading..."
autowrap_mode = 2

[node name="ButtonsVBox" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TestDeathButton" type="Button" parent="VBox/ButtonsVBox"]
layout_mode = 2
text = "1. Test Dragon Death"

[node name="AddPartButton" type="Button" parent="VBox/ButtonsVBox"]
layout_mode = 2
text = "2. Add Random Recovered Part"

[node name="UnlockFreezerButton" type="Button" parent="VBox/ButtonsVBox"]
layout_mode = 2
text = "3. Unlock Freezer (Debug)"

[node name="FreezeRandomButton" type="Button" parent="VBox/ButtonsVBox"]
layout_mode = 2
text = "4. Freeze Random Part"

[node name="ForceDecayButton" type="Button" parent="VBox/ButtonsVBox"]
layout_mode = 2
text = "5. Force Part to Decay"

[node name="HSeparator" type="HSeparator" parent="VBox/ButtonsVBox"]
layout_mode = 2

[node name="OpenInventoryButton" type="Button" parent="VBox/ButtonsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
text = "OPEN PARTS INVENTORY"

[connection signal="pressed" from="VBox/ButtonsVBox/TestDeathButton" to="." method="_on_test_death_pressed"]
[connection signal="pressed" from="VBox/ButtonsVBox/AddPartButton" to="." method="_on_add_part_pressed"]
[connection signal="pressed" from="VBox/ButtonsVBox/UnlockFreezerButton" to="." method="_on_unlock_freezer_pressed"]
[connection signal="pressed" from="VBox/ButtonsVBox/FreezeRandomButton" to="." method="_on_freeze_random_pressed"]
[connection signal="pressed" from="VBox/ButtonsVBox/ForceDecayButton" to="." method="_on_force_decay_pressed"]
[connection signal="pressed" from="VBox/ButtonsVBox/OpenInventoryButton" to="." method="_on_open_inventory_pressed"]
